# aoc-christmas-2022

./: CMakeLists.txt  README.md  run_all.sh
src/: day01.cpp  day01.h  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  problem.h
